@@ -1,7 +1,9 @@
 package com.twitter.finagle.stats
 
-import com.twitter.util.{Future, Stopwatch, JavaSingleton}
-import java.util.concurrent.TimeUnit
+import com.twitter.util.{Future, JavaSingleton, Time}
+import java.lang.{Float => JFloat}
+import java.util.concurrent.{Callable, TimeUnit}
+import scala.annotation.varargs
 
 /**
  * A writeable Counter. Only sums are kept of Counters. An example
@@ -17,7 +19,71 @@ trait Counter {
  * "queue depth" or "query width in a stream of requests".
  */
 trait Stat {
-  def add(value: Float)
+  def add(value: Float): Unit
+}
+
+/**
+ * Helpers for working with histograms.  Java-friendly versions can be found in
+ * [[com.twitter.finagle.stats.JStats]].
+ */
+object Stat {
+  /**
+   * Time a given `fn` using the given `unit`.
+   */
+  def time[A](stat: Stat, unit: TimeUnit)(f: => A): A = {
+    val start = Time.now
+    val result = f
+    stat.add((Time.now - start).inUnit(unit))
+    result
+  }
+
+  /**
+   * Time a given `fn` using milliseconds.
+   */
+  def time[A](stat: Stat)(f: => A): A = time(stat, TimeUnit.MILLISECONDS)(f)
+
+  /**
+   * Time a given asynchronous `fn` using the given `unit`.
+   */
+  def timeFuture[A](stat: Stat, unit: TimeUnit)(f: => Future[A]): Future[A] = {
+    val start = Time.now
+    f ensure {
+      stat.add((Time.now - start).inUnit(unit))
+    }
+  }
+
+  /**
+   * Time a given asynchronous `fn` using milliseconds.
+   */
+  def timeFuture[A](stat: Stat)(f: => Future[A]): Future[A] =
+    timeFuture(stat, TimeUnit.MILLISECONDS)(f)
+}
+
+/**
+ * Stat utility methods for ease of use from java.
+ */
+object JStats {
+  /**
+   * Time a given `fn` using the given `unit`.
+   */
+  def time[A](stat: Stat, fn: Callable[A], unit: TimeUnit): A = Stat.time(stat, unit)(fn.call())
+
+  /**
+   * Time a given `fn` using milliseconds.
+   */
+  def time[A](stat: Stat, fn: Callable[A]): A = Stat.time(stat)(fn.call())
+
+  /**
+   * Time a given asynchronous `fn` using the given `unit`.
+   */
+  def timeFuture[A](stat: Stat, fn: Callable[Future[A]], unit: TimeUnit): Future[A] =
+    Stat.timeFuture(stat, unit)(fn.call())
+
+  /**
+   * Time a given asynchronous `fn` using milliseconds.
+   */
+  def timeFuture[A](stat: Stat, fn: Callable[Future[A]]): Future[A] =
+    Stat.timeFuture(stat)(fn.call())
 }
 
 /**
@@ -30,6 +96,37 @@ trait Gauge {
 
 object StatsReceiver {
   private[StatsReceiver] var immortalGauges: List[Gauge] = Nil
+}
+
+/**
+ * [[com.twitter.finagle.stats.StatsReceiver]] utility methods for ease of use from java.
+ */
+object StatsReceivers {
+  /**
+   * Java compatible version of `StatsReceiver#counter`.
+   */
+  @varargs
+  def counter(statsReceiver: StatsReceiver, name: String*): Counter = statsReceiver.counter(name: _*)
+
+  /**
+   * Java compatible version of `StatsReceiver#addGauge`.
+   */
+  @varargs
+  def addGauge(statsReceiver: StatsReceiver, callable: Callable[JFloat], name: String*): Gauge =
+    statsReceiver.addGauge(name: _*)(callable.call())
+
+  /**
+   * Java compatible version of `StatsReceiver#provideGauge`.
+   */
+  @varargs
+  def provideGauge(statsReceiver: StatsReceiver, callable: Callable[JFloat], name: String*): Unit =
+    statsReceiver.provideGauge(name: _*)(callable.call())
+
+  /**
+   * Java compatible version of `StatsReceiver#stat`.
+   */
+  @varargs
+  def stat(statsReceiver: StatsReceiver, name: String*): Stat = statsReceiver.stat(name: _*)
 }
 
 /**
@@ -56,59 +153,52 @@ trait StatsReceiver {
 
   /**
    * Time a given function using the given TimeUnit
+   * This method will soon be deprecated in favor of [[com.twitter.finagle.stats.Stat.time]].
    */
-  def time[T](unit: TimeUnit, stat: Stat)(f: => T): T = {
-    val elapsed = Stopwatch.start()
-    val result = f
-    stat.add(elapsed().inUnit(unit))
-    result
-  }
+  def time[T](unit: TimeUnit, stat: Stat)(f: => T): T = Stat.time(stat, unit)(f)
 
   /**
    * Time a given function using the given TimeUnit
+   * This method will soon be deprecated in favor of [[com.twitter.finagle.stats.Stat.time]].
    */
-  def time[T](unit: TimeUnit, name: String*)(f: => T): T = {
-    time(unit, stat(name: _*))(f)
-  }
+  def time[T](unit: TimeUnit, name: String*)(f: => T): T = time(unit, stat(name: _*))(f)
 
   /**
    * Time a given function in milliseconds
+   * This method will soon be deprecated in favor of [[com.twitter.finagle.stats.Stat.time]].
    */
-  def time[T](name: String*)(f: => T): T = {
-    time(TimeUnit.MILLISECONDS, name: _*)(f)
-  }
+  def time[T](name: String*)(f: => T): T = time(TimeUnit.MILLISECONDS, name: _*)(f)
 
   /**
    * Time a given future using the given TimeUnit
+   * This method will soon be deprecated in favor of [[com.twitter.finagle.stats.Stat.timeFuture]].
    */
-  def timeFuture[T](unit: TimeUnit, stat: Stat)(f: => Future[T]): Future[T] = {
-    val elapsed = Stopwatch.start()
-    f ensure {
-      stat.add(elapsed().inUnit(unit))
-    }
-  }
+  def timeFuture[T](unit: TimeUnit, stat: Stat)(f: => Future[T]): Future[T] =
+    Stat.timeFuture(stat, unit)(f)
 
   /**
    * Time a given future using the given TimeUnit
+   * This method will soon be deprecated in favor of [[com.twitter.finagle.stats.Stat.timeFuture]].
    */
-  def timeFuture[T](unit: TimeUnit, name: String*)(f: => Future[T]): Future[T] = {
+  def timeFuture[T](unit: TimeUnit, name: String*)(f: => Future[T]): Future[T] =
     timeFuture(unit, stat(name: _*))(f)
-  }
 
   /**
-   * Time a given future in milliseconds
+   * Time a given future in milliseconds.
+   * This method will soon be deprecated in favor of [[com.twitter.finagle.stats.Stat.timeFuture]].
    */
-  def timeFuture[T](name: String*)(f: => Future[T]): Future[T] = {
+  def timeFuture[T](name: String*)(f: => Future[T]): Future[T] =
     timeFuture(TimeUnit.MILLISECONDS, name: _*)(f)
-  }
 
   /**
-   * Get a Counter with the description
+   * Get a Counter with the prefix `name`.
    */
   def counter(name: String*): Counter
 
   /**
-   * Get a Counter with the description. This method is a convenience for Java program.
+   * Get a Counter with the prefix `name`. This method is a convenience for Java
+   * programs, but is no longer needed because StatsReceiver#counter is usable
+   * from java.
    */
   def counter0(name: String): Counter = counter(name)
 
@@ -118,7 +208,9 @@ trait StatsReceiver {
   def stat(name: String*): Stat
 
   /**
-   * Get a Stat with the description. This method is a convenience for Java programs.
+   * Get a Stat with the description. This method is a convenience for Java
+   * programs, but is no longer needed because StatsReceiver#counter is usable
+   * from java.
    */
   def stat0(name: String): Stat = stat(name)
 
@@ -127,7 +219,7 @@ trait StatsReceiver {
    * exists in perpetuity. Measurements under the same name are added
    * together.
    */
-  def provideGauge(name: String*)(f: => Float) {
+  def provideGauge(name: String*)(f: => Float): Unit = {
     val gauge = addGauge(name: _*)(f)
     StatsReceiver.synchronized {
       StatsReceiver.immortalGauges ::= gauge
@@ -135,18 +227,18 @@ trait StatsReceiver {
   }
 
   /**
-   * Add the function ``f'' as a gauge with the given name. The
+   * Add the function `f` as a gauge with the given name. The
    * returned gauge value is only weakly referenced by the
    * StatsReceiver, and if garbage collected will cease to be a part
    * of this measurement: thus, it needs to be retained by the
-   * caller. Immortal measurements are made with ``provideGauge''. As
-   * with ``provideGauge'', gauges with equal names are added
+   * caller. Immortal measurements are made with `provideGauge`. As
+   * with `provideGauge`, gauges with equal names are added
    * together.
    */
   def addGauge(name: String*)(f: => Float): Gauge
 
   /**
-   * Prepend ``namespace'' to the names of this receiver.
+   * Prepend `namespace` to the names of this receiver.
    */
   def scope(namespace: String): StatsReceiver = {
     if (namespace == "") this
@@ -213,7 +305,7 @@ abstract class NameTranslatingStatsReceiver(val self: StatsReceiver)
  * in unit tests and as defaults in situations where metrics are not strictly
  * required.
  */
-class NullStatsReceiver extends StatsReceiver with JavaSingleton {
+class NullStatsReceiver extends StatsReceiver {
   val repr = this
   override def isNull = true
 
@@ -228,4 +320,6 @@ class NullStatsReceiver extends StatsReceiver with JavaSingleton {
   override def toString = "NullStatsReceiver"
 }
 
-object NullStatsReceiver extends NullStatsReceiver
+object NullStatsReceiver extends NullStatsReceiver {
+  def get() = this
+}
